# dust-runner-game

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: audio.c  audio.h  enemy.c  enemy.h  game.h  hud.c  hud.h  input.c  input.h  main.c  menu.c  menu.h  particle.c  particle.h  particle_draw.c  parts.c  parts.h  postfx.c  postfx.h  projectile.c  projectile.h  sky.c  sky.h  terrain.c  terrain.h  upgrade.c  upgrade.h  vehicle.c  vehicle.h  wave.c  wave.h
tests/: test_particle.c  test_parts.c
web/: shell.html
